[package]
name = "website-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.17"
serde = {version = "1.0.151", features = ["derive"]}
prql-compiler = {path = "../../prql-compiler", default-features = false}
regex = "1.3.3"

